<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/regular"
        android:text="@string/Healthcare"
        android:textColor="#1A237E"
        android:textSize="34sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleHome"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:columnCount="2"
        android:rowCount="3" >

        <androidx.cardview.widget.CardView
            android:id="@+id/findHospital"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="#3949AB"
            app:cardCornerRadius="8dp"
           android:layout_margin="15dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HOSPITAL"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/findMedical"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="#3949AB"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_marginTop="15dp"
         android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PHARMACY"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/findLab"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="#3949AB"
            app:cardCornerRadius="8dp"
            android:layout_margin="15dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LABORATORIES"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/schemes"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="#3949AB"
            app:cardCornerRadius="8dp"
            android:layout_margin="15dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GOVT_HEALTH_SCHEMES"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fitness"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="#3949AB"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_margin="15dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FITNESS_CENTRE"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/health"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="#3949AB"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_margin="15dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FREE_HEALTH_CAMPS"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>
</RelativeLayout>
